<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_bmi">BMI</string>
    <string name="title_statistics">Statistics</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="today">Today</string>
    <string name="morning">Morning</string>
    <string name="time">Time</string>
    <string name="age">Age</string>
    <string name="calculate">Calculate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="des">des</string>
    <string name="very_severly_underweight">Very severly underweight</string>
    <string name="_16"><![CDATA[<16]]></string>
    <string name="severly_underweight">Severly underweight</string>
    <string name="_16_0_16_9">16.0-16.9</string>
    <string name="underweight">Underweight</string>
    <string name="_17_0_18_4">17.0-18.4</string>
    <string name="normal">Normal</string>
    <string name="_18_5_24_9">18.5-24.9</string>
    <string name="_25_0_29_9">25.0-29.9</string>
    <string name="obese_i">Obese Class I</string>
    <string name="_30_0_34_9">30.0-34.9</string>
    <string name="obese_ii">Obese Class II</string>
    <string name="_35_0_39_9">35.0-39.9</string>
    <string name="obese_iii">Obese Class III</string>
    <string name="_40_0"><![CDATA[>=40.0]]></string>
    <string name="overweight">Overweight</string>
    <string name="me">Me</string>
    <string name="recent">Recent</string>
    <string name="your_bmi_is">Your BMI is...</string>
    <string name="_5ft_7in">5ft 7in |</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="bmi">BMI</string>
    <string name="update">Update</string>
</resources>