<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="vertical">

    <lecho.lib.hellocharts.view.PieChartView
        android:id="@+id/chart"
        android:layout_width="250dp"
        android:layout_height="250dp" />
        <TextView
            android:id="@+id/bmi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_bmi_is"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/bmi_res_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25.9"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/res_desc"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/overweight"
            android:textColor="@color/black"
            android:background="@drawable/white_backgrond_edit_text"
            android:backgroundTint="@color/light_yellow"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/weight_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="75.00 kg |"
                />
            <TextView
                android:id="@+id/height_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5ft_7in"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:id="@+id/gender_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male |"
                android:layout_marginLeft="5dp"
                />
            <TextView
                android:id="@+id/age_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20 years old"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
     <LinearLayout
         android:id="@+id/verySevereLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:gravity="center_vertical"
         >
         <ImageView
             android:layout_width="12dp"
             android:layout_height="12dp"
             android:layout_gravity="center_vertical"
             android:background="@drawable/points_drawable"
             android:backgroundTint="@color/very_severly_underweight"
             android:contentDescription="@string/des" />
         <TextView
             android:id="@+id/very_severly_underweight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/very_severly_underweight"
             android:layout_marginStart="5dp"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/_16"
             android:layout_gravity="end"
             android:gravity="end"
             />

     </LinearLayout>
        <LinearLayout
            android:id="@+id/severeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/points_drawable"
                android:backgroundTint="@color/severly_underweight"
                android:contentDescription="@string/des" />
            <TextView
                android:id="@+id/severly_underweight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severly_underweight"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_16_0_16_9"
                android:layout_gravity="end"
                android:gravity="end"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/underweightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/points_drawable"
                android:backgroundTint="@color/underweight"
                android:contentDescription="@string/des" />
            <TextView
                android:id="@+id/underweight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/underweight"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_17_0_18_4"
                android:layout_gravity="end"
                android:gravity="end"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/normalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/points_drawable"
                android:backgroundTint="@color/normal"
                android:contentDescription="@string/des" />
            <TextView
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_18_5_24_9"
                android:layout_gravity="end"
                android:gravity="end"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/overWeightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/points_drawable"
                android:contentDescription="@string/des" />
            <TextView
                android:id="@+id/overWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overweight"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_25_0_29_9"
                android:layout_gravity="end"
                android:gravity="end"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/obese1lLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/points_drawable"
                android:backgroundTint="@color/obese_class_i"
                android:contentDescription="@string/des" />
            <TextView
                android:id="@+id/obese1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obese_i"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_30_0_34_9"
                android:layout_gravity="end"
                android:gravity="end"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/obese2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/points_drawable"
                android:backgroundTint="@color/obese_class_ii"
                android:contentDescription="@string/des" />
            <TextView
                android:id="@+id/obese2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obese_ii"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_35_0_39_9"
                android:layout_gravity="end"
                android:gravity="end"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/obese3Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/points_drawable"
                android:backgroundTint="@color/obese_class_iii"
                android:contentDescription="@string/des" />
            <TextView
                android:id="@+id/obese3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obese_iii"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_40_0"
                android:layout_gravity="end"
                android:gravity="end"
                />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</layout>